[package]
name = "cmdline"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.44"
crossbeam = "0.8.4"
futures-util = "0.3.32"
log = "0.4.29"
log4rs = "1.4.0"
reqwest = { version = "0.13.2", features = ["json", "query"] }
ring = "0.17.14"
scraper = "0.26.0"
seahash = "4.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tokio-tungstenite = "0.29.0"
